--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -43,7 +43,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#about">About</a>
@@ -61,6 +61,8 @@
     </section>
 
     <!---------------------------------------- Navbar Section Ended ------------------------------------>
+
+    <button id="scrollBtn" onclick="scrollToTop()"><i class='bx bx-chevron-up' ></i></button>
 
     <div class="container mt-5">
         <div class="row">
@@ -177,7 +179,7 @@
             <div class="row">
                 <div class="col-12 col-md-4 footer-logo">
                     <a href="#">
-                        <img src="/assets/images/footer-logo.svg" class="img-fluid" alt="">
+                        <img src="/assets/images/LVSR Logo.svg" class="img-fluid" alt="">
                     </a>
                     <p class="my-3">LVSR simplifies managing and sharing online presence. Customize your profile, share
                         easily, and connect with others seamlessly. Experience privacy and security assurance.</p>
@@ -237,9 +239,12 @@
         </div>
     </section>
 
-
-
     <!--------------------------------------------- Footer Section Ended--------------------------------->
+
+    <!-------------------------------------------- Custom JavaScript Link-------------------------------->
+
+    <script src="/assets/js/myScript.js"></script>
+
 
 
     <!-- Optional JavaScript; choose one of the two! -->
