--- a/refund-policy.html
+++ b/refund-policy.html
@@ -86,6 +86,8 @@
 
     <!---------------------------------------- Navbar Section Ended ------------------------------------>
 
+    <button id="scrollBtn" onclick="scrollToTop()"><i class='bx bx-chevron-up' ></i></button>
+
     <div class="container mt-5">
       <div class="row">
         <h4 class="fw-bold mt-5">
@@ -176,7 +178,7 @@
             <div class="row">
                 <div class="col-12 col-md-4 footer-logo">
                     <a href="#">
-                        <img src="/assets/images/footer-logo.svg" class="img-fluid" alt="">
+                        <img src="/assets/images/LVSR Logo.svg" class="img-fluid" alt="">
                     </a>
                     <p class="my-3">LVSR simplifies managing and sharing online presence. Customize your profile, share
                         easily, and connect with others seamlessly. Experience privacy and security assurance.</p>
@@ -236,10 +238,11 @@
         </div>
     </section>
 
-
-
     <!--------------------------------------------- Footer Section Ended--------------------------------->
 
+    <!-------------------------------------------- Custom JavaScript Link-------------------------------->
+
+    <script src="/assets/js/myScript.js"></script>
 
 
     <!-- Optional JavaScript; choose one of the two! -->
