--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -87,6 +87,8 @@
 
     <!---------------------------------------- Navbar Section Ended ------------------------------------>
 
+    <button id="scrollBtn" onclick="scrollToTop()"><i class='bx bx-chevron-up' ></i></button>
+
     <div class="container mt-5">
       <div class="row">
         <h4 class="fw-bold mt-5">
@@ -155,7 +157,7 @@
           providing our services. <br />
         </p>
         <h4 class="fw-bold my-3">Paid Services (if applicable)</h4>
-        <p>
+        <p class="mb-5">
           LVSR may offer premium features or paid versions. If you choose to
           subscribe to these services:
           <br />
@@ -176,7 +178,7 @@
             <div class="row">
                 <div class="col-12 col-md-4 footer-logo">
                     <a href="#">
-                        <img src="/assets/images/footer-logo.svg" class="img-fluid" alt="">
+                        <img src="/assets/images/LVSR Logo.svg" class="img-fluid" alt="">
                     </a>
                     <p class="my-3">LVSR simplifies managing and sharing online presence. Customize your profile, share
                         easily, and connect with others seamlessly. Experience privacy and security assurance.</p>
@@ -236,9 +238,11 @@
         </div>
     </section>
 
-
-
     <!--------------------------------------------- Footer Section Ended--------------------------------->
+
+        <!-------------------------------------------- Custom JavaScript Link-------------------------------->
+
+        <script src="/assets/js/myScript.js"></script>
 
 
 
