--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         through QR codes, NFC, or direct links. With privacy and security ensured, LVSR offers a
                         seamless user experience to connect and engage with others.</p>
                 </div>
-                <div class="col-12 col-md-6 text-center">
+                <div class="col-12 col-md-6 text-center pt-md-0 pt-3">
                     <img src="/assets/images/2760276.jpg" class="img-fluid how-it-works-image-2 " alt="">
                 </div>
             </div>
@@ -116,7 +116,7 @@
 
     <section class="my-5 how-it-works py-5" id="works">
         <div class="container">
-            <div class="text-center pt-5">
+            <div class="text-center pt-md-5 pt-0">
                 <h3 class="fw-bold">How it works</h3>
                 <p>LVSR simplifies managing and sharing online presence. Customize your profile, share easily, and
                     connect <span class="divider"></span> with others seamlessly. Experience privacy and security
