--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                                 enhanced capabilities for a subscription fee. </div>
                         </div>
                     </div>
-                    <h6 class="fw-bold my-3">Account and Registration FAQs:</h6>
+                    <h6 class="fw-bold mt-5 mb-4">Account and Registration FAQs:</h6>
                     <div class="accordion-item">
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -318,7 +318,7 @@
                                 email address for registration.</div>
                         </div>
                     </div>
-                    <h6 class="fw-bold my-3">Features and Functionality FAQs:s</h6>
+                    <h6 class="fw-bold mt-5 mb-4">Features and Functionality FAQs:s</h6>
                     <div class="accordion-item">
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -392,7 +392,7 @@
                             </div>
                         </div>
                     </div>
-                    <h6 class="fw-bold my-3">Features and Functionality FAQs:s</h6>
+                    <h6 class="fw-bold mt-5 mb-4">Features and Functionality FAQs:s</h6>
                     <div class="accordion-item">
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -467,7 +467,7 @@
                                 content for swift action.</div>
                         </div>
                     </div>
-                    <h6 class="fw-bold my-3">Paid Services and Billing FAQs:</h6>
+                    <h6 class="fw-bold mt-5 mb-4">Paid Services and Billing FAQs:</h6>
                     <div class="accordion-item">
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -544,7 +544,7 @@
                                 of purchase. Please refer to our Refund Policy for more details.</div>
                         </div>
                     </div>
-                    <h6 class="fw-bold my-3">Technical Support FAQs:</h6>
+                    <h6 class="fw-bold mt-5 mb-4">Technical Support FAQs:</h6>
                     <div class="accordion-item">
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
