--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -39,7 +39,7 @@
     <!--------------------------------------- Navbar Section Started ----------------------------------->
 
     <section>
-      <nav class="navbar navbar-expand-lg bg-white fixed-top">
+      <nav class="navbar navbar-expand-lg bg-white fixed-top border-bottom">
         <div class="container">
           <a class="navbar-brand" href="/">
             <img
@@ -65,17 +65,17 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#about"
+                <a class="nav-link active" aria-current="page" href="/#about"
                   >About</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#works"
+                <a class="nav-link active" aria-current="page" href="/#works"
                   >How it works</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#faqs"
+                <a class="nav-link active" aria-current="page" href="/#faqs"
                   >FAQs</a
                 >
               </li>
