--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -30,7 +30,7 @@
     <!--------------------------------------- Navbar Section Started ----------------------------------->
 
     <section>
-        <nav class="navbar navbar-expand-lg bg-white fixed-top">
+        <nav class="navbar navbar-expand-lg bg-white fixed-top border-bottom">
             <div class="container">
                 <a class="navbar-brand" href="/">
                     <img src="/assets/images/LVSR Logo.svg" class="img-fluid logo" alt="" />
@@ -46,13 +46,13 @@
                             <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#about">About</a>
+                            <a class="nav-link active" aria-current="page" href="/#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#works">How it works</a>
+                            <a class="nav-link active" aria-current="page" href="/#works">How it works</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#faqs">FAQs</a>
+                            <a class="nav-link active" aria-current="page" href="/#faqs">FAQs</a>
                         </li>
                     </ul>
                 </div>
