--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -30,7 +30,7 @@
     <!--------------------------------------- Navbar Section Started ----------------------------------->
 
     <section>
-        <nav class="navbar navbar-expand-lg bg-white fixed-top border-bottom">
+        <nav class="navbar navbar-expand-lg bg-white fixed-top border-bottom shadow">
             <div class="container">
                 <a class="navbar-brand" href="/">
                     <img src="/assets/images/LVSR Logo.svg" class="img-fluid logo" alt="" />
