--- a/refund-policy.html
+++ b/refund-policy.html
@@ -38,7 +38,7 @@
     <!--------------------------------------- Navbar Section Started ----------------------------------->
 
     <section>
-      <nav class="navbar navbar-expand-lg bg-white fixed-top border-bottom">
+      <nav class="navbar navbar-expand-lg bg-white fixed-top border-bottom shadow">
         <div class="container">
           <a class="navbar-brand" href="/">
             <img
