--- a/refund-policy.html
+++ b/refund-policy.html
@@ -38,7 +38,9 @@
     <!--------------------------------------- Navbar Section Started ----------------------------------->
 
     <section>
-      <nav class="navbar navbar-expand-lg bg-white fixed-top border-bottom shadow">
+      <nav
+        class="navbar navbar-expand-lg bg-white fixed-top border-bottom shadow"
+      >
         <div class="container">
           <a class="navbar-brand" href="/">
             <img
@@ -86,7 +88,11 @@
 
     <!---------------------------------------- Navbar Section Ended ------------------------------------>
 
-    <button id="scrollBtn" onclick="scrollToTop()"><i class='bx bx-chevron-up' ></i></button>
+    <button id="scrollBtn" onclick="scrollToTop()">
+      <i class="bx bx-chevron-up"></i>
+    </button>
+
+    <!------------------------------------------- Refund Policy ---------------------------------------->
 
     <div class="container mt-5">
       <div class="row">
@@ -170,72 +176,96 @@
       </div>
     </div>
 
-    
     <!-------------------------------------------- Footer Section Started--------------------------------->
 
     <footer class="hero-bg py-2">
-        <div class="container my-3">
-            <div class="row">
-                <div class="col-12 col-md-4 footer-logo">
-                    <a href="#">
-                        <img src="/assets/images/LVSR Logo.svg" class="img-fluid" alt="">
-                    </a>
-                    <p class="my-3">LVSR simplifies managing and sharing online presence. Customize your profile, share
-                        easily, and connect with others seamlessly. Experience privacy and security assurance.</p>
-                </div>
-                <div class="col-12 col-md-4 mt-md-5 mt-0">
-                    <h5 class="fw-bold mt-5">Useful Links</h5>
-                    <div class="useful-links">
-                        <ul class="p-0">
-                            <li class="mt-md-4 mt-0">
-                                <a href="/terms-and-conditions.html" class="text-decoration-none ">Terms and
-                                    Conditions</a>
-                            </li>
-                            <li class="my-1">
-                                <a href="/privacy-policy.html" class="text-decoration-none">Privacy Policy </a>
-                            </li>
-                            <li class="my-1">
-                                <a href="/refund-policy.html" class="text-decoration-none">Refund Policy </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-12 col-md-4 mt-md-5 mt-0">
-                    <h5 class="fw-bold mt-md-5 mt-2">Follow Us on Social Media</h5>
-                    <div class="d-flex gap-3 ">
-                        <a href="#" class="text-decoration-none">
-                            <div class="bg-dark social d-flex justify-content-center align-items-center rounded-circle">
-                                <i class='bx bxl-facebook text-white'></i>
-                            </div>
-                        </a>
-                        <a href="#" class="text-decoration-none">
-                            <div class="bg-dark social d-flex justify-content-center align-items-center rounded-circle">
-                                <i class='bx bxl-twitter text-white'></i>
-                            </div>
-                        </a>
-                        <a href="#" class="text-decoration-none">
-                            <div class="bg-dark social d-flex justify-content-center align-items-center rounded-circle">
-                                <i class='bx bxl-instagram text-white'></i>
-                            </div>
-                        </a>
-                        <a href="#" class="text-decoration-none">
-                            <div class="bg-dark social d-flex justify-content-center align-items-center rounded-circle">
-                                <i class='bx bxl-youtube text-white'></i>
-                            </div>
-                        </a>
-                    </div>
-                </div>
+      <div class="container my-3">
+        <div class="row">
+          <div class="col-12 col-md-4 footer-logo">
+            <a href="#">
+              <img
+                src="/assets/images/LVSR Logo.svg"
+                class="img-fluid"
+                alt=""
+              />
+            </a>
+            <p class="my-3">
+              LVSR simplifies managing and sharing online presence. Customize
+              your profile, share easily, and connect with others seamlessly.
+              Experience privacy and security assurance.
+            </p>
+          </div>
+          <div class="col-12 col-md-4 mt-md-5 mt-0">
+            <h5 class="fw-bold mt-5">Useful Links</h5>
+            <div class="useful-links">
+              <ul class="p-0">
+                <li class="mt-md-4 mt-0">
+                  <a
+                    href="/terms-and-conditions.html"
+                    class="text-decoration-none"
+                    >Terms and Conditions</a
+                  >
+                </li>
+                <li class="my-1">
+                  <a href="/privacy-policy.html" class="text-decoration-none"
+                    >Privacy Policy
+                  </a>
+                </li>
+                <li class="my-1">
+                  <a href="/refund-policy.html" class="text-decoration-none"
+                    >Refund Policy
+                  </a>
+                </li>
+              </ul>
             </div>
+          </div>
+          <div class="col-12 col-md-4 mt-md-5 mt-0">
+            <h5 class="fw-bold mt-md-5 mt-2">Follow Us on Social Media</h5>
+            <div class="d-flex gap-3">
+              <a href="#" class="text-decoration-none">
+                <div
+                  class="bg-dark social d-flex justify-content-center align-items-center rounded-circle"
+                >
+                  <i class="bx bxl-facebook text-white"></i>
+                </div>
+              </a>
+              <a href="#" class="text-decoration-none">
+                <div
+                  class="bg-dark social d-flex justify-content-center align-items-center rounded-circle"
+                >
+                  <i class="bx bxl-twitter text-white"></i>
+                </div>
+              </a>
+              <a href="#" class="text-decoration-none">
+                <div
+                  class="bg-dark social d-flex justify-content-center align-items-center rounded-circle"
+                >
+                  <i class="bx bxl-instagram text-white"></i>
+                </div>
+              </a>
+              <a href="#" class="text-decoration-none">
+                <div
+                  class="bg-dark social d-flex justify-content-center align-items-center rounded-circle"
+                >
+                  <i class="bx bxl-youtube text-white"></i>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
+      </div>
     </footer>
 
     <section class="bg-dark">
-        <div class="container">
-            <div class="row">
-                <p class="text-center bg-dark text-white py-3 m-0">Copyright © 2023 <a href="#"
-                        class="text-decoration-none text-white">LVSR</a> All Rights Reserved.</p>
-            </div>
+      <div class="container">
+        <div class="row">
+          <p class="text-center bg-dark text-white py-3 m-0">
+            Copyright © 2023
+            <a href="#" class="text-decoration-none text-white">LVSR</a> All
+            Rights Reserved.
+          </p>
         </div>
+      </div>
     </section>
 
     <!--------------------------------------------- Footer Section Ended--------------------------------->
@@ -243,7 +273,6 @@
     <!-------------------------------------------- Custom JavaScript Link-------------------------------->
 
     <script src="/assets/js/myScript.js"></script>
-
 
     <!-- Optional JavaScript; choose one of the two! -->
 
