--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <section class="my-5 how-it-works py-5" id="works">
         <div class="container">
-            <div class="text-center pt-md-5 pt-0">
+            <div class="text-center">
                 <h3 class="fw-bold">How it works</h3>
                 <p>LVSR simplifies managing and sharing online presence. Customize your profile, share easily, and
                     connect <span class="divider"></span> with others seamlessly. Experience privacy and security
@@ -726,14 +726,14 @@
         <div class="container my-3">
             <div class="row">
                 <div class="col-12 col-md-4 footer-logo">
-                    <a href="#">
+                    <a href="/">
                         <img src="/assets/images/LVSR Logo.svg" class="img-fluid" alt="">
                     </a>
                     <p class="my-3">LVSR simplifies managing and sharing online presence. Customize your profile, share
                         easily, and connect with others seamlessly. Experience privacy and security assurance.</p>
                 </div>
                 <div class="col-12 col-md-4 mt-md-5 mt-0">
-                    <h5 class="fw-bold mt-5">Useful Links</h5>
+                    <h5 class="fw-bold mt-4">Useful Links</h5>
                     <div class="useful-links">
                         <ul class="p-0">
                             <li class="mt-md-3 mt-0">
@@ -750,7 +750,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-4 mt-md-5 mt-0">
-                    <h5 class="fw-bold mt-md-5 mt-2">Follow Us on Social Media</h5>
+                    <h5 class="fw-bold mt-md-4 mt-2">Follow Us on Social Media</h5>
                     <div class="d-flex gap-3 mb-md-0 mb-4 mt-3">
                         <a href="#" class="text-decoration-none">
                             <div class="bg-dark social d-flex justify-content-center align-items-center rounded-circle">
