--- a/refund-policy.html
+++ b/refund-policy.html
@@ -168,7 +168,7 @@
           the original payment method used for the purchase within 7 days.
         </p>
         <h4 class="fw-bold my-3 pt-4">Contact Information</h4>
-        <p>
+        <p class="mb-5">
           If you have any questions or concerns regarding our Refund Policy,
           please contact our support team at info@lvsr.io. We are here to assist
           you.
@@ -182,7 +182,7 @@
       <div class="container my-3">
         <div class="row">
           <div class="col-12 col-md-4 footer-logo">
-            <a href="#">
+            <a href="/">
               <img
                 src="/assets/images/LVSR Logo.svg"
                 class="img-fluid"
@@ -196,10 +196,10 @@
             </p>
           </div>
           <div class="col-12 col-md-4 mt-md-5 mt-0">
-            <h5 class="fw-bold mt-5">Useful Links</h5>
+               <h5 class="fw-bold mt-4">Useful Links</h5>
             <div class="useful-links">
               <ul class="p-0">
-                <li class="mt-md-4 mt-0">
+                <li class="mt-md-3 mt-0">
                   <a
                     href="/terms-and-conditions.html"
                     class="text-decoration-none"
@@ -220,8 +220,8 @@
             </div>
           </div>
           <div class="col-12 col-md-4 mt-md-5 mt-0">
-            <h5 class="fw-bold mt-md-5 mt-2">Follow Us on Social Media</h5>
-            <div class="d-flex gap-3">
+            <h5 class="fw-bold mt-md-4 mt-2">Follow Us on Social Media</h5>
+            <div class="d-flex gap-3 mb-md-0 mb-4 mt-3">
               <a href="#" class="text-decoration-none">
                 <div
                   class="bg-dark social d-flex justify-content-center align-items-center rounded-circle"
