--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -184,7 +184,7 @@
       <div class="container my-3">
         <div class="row">
           <div class="col-12 col-md-4 footer-logo">
-            <a href="#">
+            <a href="/">
               <img
                 src="/assets/images/LVSR Logo.svg"
                 class="img-fluid"
@@ -198,10 +198,10 @@
             </p>
           </div>
           <div class="col-12 col-md-4 mt-md-5 mt-0">
-            <h5 class="fw-bold mt-5">Useful Links</h5>
+               <h5 class="fw-bold mt-4">Useful Links</h5>
             <div class="useful-links">
               <ul class="p-0">
-                <li class="mt-md-4 mt-0">
+                <li class="mt-md-3 mt-0">
                   <a
                     href="/terms-and-conditions.html"
                     class="text-decoration-none"
@@ -222,8 +222,8 @@
             </div>
           </div>
           <div class="col-12 col-md-4 mt-md-5 mt-0">
-            <h5 class="fw-bold mt-md-5 mt-2">Follow Us on Social Media</h5>
-            <div class="d-flex gap-3">
+            <h5 class="fw-bold mt-md-4 mt-2">Follow Us on Social Media</h5>
+            <div class="d-flex gap-3 mb-md-0 mb-4 mt-3">
               <a href="#" class="text-decoration-none">
                 <div
                   class="bg-dark social d-flex justify-content-center align-items-center rounded-circle"
