--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         seamless user experience to connect and engage with others.</p>
                 </div>
                 <div class="col-12 col-md-6 text-center pt-md-0 pt-3">
-                    <img src="/assets/images/2760276.jpg" class="img-fluid how-it-works-image-2 " alt="">
+                    <img src="/assets/images/hand-holding-smartphone-social-media-concept.jpg" class="img-fluid how-it-works-image-2 " alt="">
                 </div>
             </div>
         </div>
@@ -133,14 +133,15 @@
                         identity with LVSR.</p>
                 </div>
                 <div class="col-12 col-md-6 pt-md-0 pt-3">
-                    <img src="/assets/images/social-media-marketing-concept-marketing-with-applications.jpg"
+                    <img src="/assets/images/how-it-works.jpg"
                         class="img-fluid how-it-works-image-2  " alt="">
                 </div>
             </div>
             <div class="row my-md-5 my-3">
                 
                 <div class="col-12 col-md-6 order-1 order-md-0 pt-md-0 pt-3">
-                    <img src="/assets/images/2838851.jpg" class="img-fluid how-it-works-image-2 " alt="">
+                    <img src="/assets/images/ww.jpg" class="img-fluid how-it-works-image-2 " alt="">
+
                 </div>
                 <div class="col-12 col-md-6 order-0 order-md-1">
                     <h4 class="fw-bold pt-md-5 pt-0">How it Works</h4>
